--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://b-ovsepian.github.io",
+  "homepage": "https://b-ovsepian.github.io/goit-react-hw-01-components/",
   "name": "goit-react-hw-01-components",
   "version": "0.1.0",
   "private": true,
