--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://b-ovsepian.github.io/goit-react-hw-01-components/",
+  "homepage": "https://github.com/b-ovsepian",
   "name": "goit-react-hw-01-components",
   "version": "0.1.0",
   "private": true,
@@ -16,10 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b dev -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
