--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "hhttps://github.com/b-ovsepian/goit-react-hw-01-components/",
+  "homepage": "https://github.com/b-ovsepian/goit-react-hw-01-components/",
   "name": "goit-react-hw-01-components",
   "version": "0.1.0",
   "private": true,
